--- a/src/app/modules/home/containers/home.page.html
+++ b/src/app/modules/home/containers/home.page.html
@@ -5,30 +5,39 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!-- <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Title</ion-title>
-    </ion-toolbar>
-  </ion-header> -->
+  <app-photo-filter (valueChanges)="valueChanges($event)"></app-photo-filter>
 
-  <!-- <ion-item *ngFor="let photo of photos; trackBy: trackByFn">
-    <span>{{photo.id}}</span>
-  </ion-item> -->
+  <ng-container *ngIf="photoDataDisplayed.length; else: noPhotos">
+    <ion-row class="app-home-page__photo-container">
+      <ng-container
+        *ngFor="let photo of photoDataDisplayed; trackBy: trackByFn"
+      >
+        <ion-col size="12" sizeMd="6" sizeXl="4">
+          <app-photo-card
+            class="app-home-page__photo"
+            [photo]="photo"
+          ></app-photo-card>
+        </ion-col>
+      </ng-container>
+    </ion-row>
+  </ng-container>
 
-  <div *ngFor="let photo of photoDataDisplayed; trackBy: trackByFn">
-    <app-photo-card [photo]="photo"></app-photo-card>
-  </div>
-  
+  <ng-template #noPhotos>
+    <ion-row class="app-home-page__photo-container--error">
+      <ion-col size="12">
+        <app-photo-card
+          class="app-home-page__photo"
+          [photo]="photoError"
+        ></app-photo-card>
+      </ion-col>
+    </ion-row>
+  </ng-template>
+
   <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
     <ion-infinite-scroll-content
-    loadingSpinner="bubbles"
-    loadingText="Cargando contenido">
-   
+      loadingSpinner="bubbles"
+      loadingText="Cargando contenido"
+    >
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
-
-
-  <div id="container">
-    <!-- <app-photo-filter></app-photo-filter> -->
-  </div>
 </ion-content>
