--- a/src/app/modules/home/components/photo-card/photo-card.component.html
+++ b/src/app/modules/home/components/photo-card/photo-card.component.html
@@ -5,7 +5,7 @@
   <figure class="app-photo-card__figure">
     <img [src]="photo.photo" [alt]="'imagen' + photo.id" class="app-photo-card__image" (error)="onErrorImage($event)">
     <figcaption class="app-photo-card__caption">
-      {{ photo.id > -1 ? 'Photo #' + photo.id : 'Error'}}
+      {{ figCaption }}
     </figcaption>
   </figure>
 </article>
