--- a/src/app/modules/home/components/photo-card/photo-card.component.scss
+++ b/src/app/modules/home/components/photo-card/photo-card.component.scss
@@ -1,13 +1,23 @@
-
+@import '../../../../../theme/mixins';
 
 .app-photo-card {
     align-items: flex-start;
     display: flex;
     flex-direction: column;
     padding: 10px;
+
     &__title {
         display: flex;
         justify-content: center;
+        font-size: 22px;
+
+        @include tabletSize {
+            font-size: 18px;
+        }
+
+        @include desktopSize {
+            font-size: 14px;
+        }
     }
 
     &__figure {
