--- a/src/app/modules/home/components/photo-filter/photo-filter.component.html
+++ b/src/app/modules/home/components/photo-filter/photo-filter.component.html
@@ -1,18 +1,16 @@
 <form [formGroup]="form">
-  <ion-item>
-    <ion-label position="floating">
-      Filtrar por id
-    </ion-label>
-    <ion-input formControlName="id" type="number">
-  
-    </ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label position="floating">
-      Filtrar por texto
-    </ion-label>
-    <ion-input formControlName="text">
-  
-    </ion-input>
-  </ion-item>
+  <ion-row>
+    <ion-col size="12" sizeXl="6">
+      <ion-item>
+        <ion-label position="floating"> Filtrar por id </ion-label>
+        <ion-input formControlName="id" type="number"> </ion-input>
+      </ion-item>
+    </ion-col>
+    <ion-col size="12" sizeXl="6">
+      <ion-item>
+        <ion-label position="floating"> Filtrar por texto </ion-label>
+        <ion-input formControlName="text"> </ion-input>
+      </ion-item>
+    </ion-col>
+  </ion-row>
 </form>
