--- a/src/theme/_mixins.scss
+++ b/src/theme/_mixins.scss
@@ -4,12 +4,8 @@
     }
 }
 
-@mixin phoneSize {
-    @media (max-width: 780px) {
+@mixin tabletSize {
+    @media (min-width: 781px) and (max-width: 991px) {
         @content;
     }
 }
-
-
-
-
