test(e2e): config and home test

--- a/src/app/modules/home/components/photo-filter/photo-filter.component.html
+++ b/src/app/modules/home/components/photo-filter/photo-filter.component.html
@@ -3,7 +3,7 @@
     <ion-col size="12" sizeXl="6">
       <ion-item>
         <ion-label position="floating"> Filtrar por id </ion-label>
-        <ion-input formControlName="id" type="number"> </ion-input>
+        <ion-input formControlName="id" type="number" data-cy="input-id"> </ion-input>
       </ion-item>
     </ion-col>
     <ion-col size="12" sizeXl="6">
