--- a/src/app/modules/home/containers/home.page.html
+++ b/src/app/modules/home/containers/home.page.html
@@ -23,7 +23,7 @@
   </ng-container>
 
   <ng-template #noPhotos>
-    <ion-row class="app-home-page__photo-container--error">
+    <ion-row class="app-home-page__photo-container--error" data-cy="no-results">
       <ion-col size="12">
         <app-photo-card
           class="app-home-page__photo"
