test(home): improvement

--- a/src/app/modules/home/components/photo-card/photo-card.component.html
+++ b/src/app/modules/home/components/photo-card/photo-card.component.html
@@ -8,6 +8,7 @@
       [alt]="'imagen' + photo.id"
       class="app-photo-card__image"
       (error)="onErrorImage($event)"
+      loading="lazy"
     />
     <figcaption class="app-photo-card__caption">
       {{ figCaption }}
